See if fix stop keyboard overflow on mobile.

--- a/frontend/my-wordle/styles.css
+++ b/frontend/my-wordle/styles.css
@@ -124,6 +124,7 @@ body {
 
 .keyboard {
   margin-top: 40px;
+  width: 100%;
 }
 
 .key-row {
